fix 7ab95f0 regression and remove a code duplication
play_once_per_session function in soundManager was removed in 7ab95f0
but is still used and when sound is enabled cinnamon don't start and
remain with black screen after login
with this commit I simply changed the function with play as suggested by
mtwester as "!global.session_running" condition already should make it
play only one time at session start
I also removed a small code duplication

Don't ignore the login sound within the first 10 seconds of the
session starting.

We delay like this so programs like Mintwelcome that autostart
don't play any mapping effect while the desktop is still loading.

Use gsound to play sounds in cinnamon-settings.

rename keyboard.js to virtualKeyboard.js.

This is unused outside of core cinnamon so is safe to do, and
is more descriptive.

Fix keyboard layouts

Fix keybindings for good.

Fix calendar events crashing cinnamon.

cinnamon-screen: Fix cinnamon_screen_get_mouse_window().

It was iterating thru the actor list in the wrong order, and
breaking desklet dnd.

cs_tiling: remove HUD setting.

Use correct method to get a window's pid.

Fix cinnamon_app_create_icon_texture()

Re-enable XApp icon-name support.

Restore desktop effects

Fix screenshots.

Restore scroll view fade.

It's not working right just yet..

Add missing file.

Fix global keybindings staying active during a modal state.

Fix expo mouse events and animations.

Fix live previews for alt-tab, overview

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cinnamon (5.3.0) UNRELEASED; urgency=medium
+
+  * Adapt to muffin 5.3 changes.
+
+ -- Michael Webster <miketwebster@gmail.com>  Wed, 26 Jan 2022 09:12:03 -0500
+
 cinnamon (5.2.7) una; urgency=medium
 
   [ Michael Webster ]
